Fixed layout issue

--- a/responsive_design/02-1-styles.css
+++ b/responsive_design/02-1-styles.css
@@ -330,13 +330,17 @@ a:active {
   white-space: nowrap;
 }
 
+main img {
+  width: 100%;
+  height: auto;
+}
 /*** 2. LAYOUT ***/
 
 /* Layout
       ============================= */
 
 .container {
-  width: 960px;
+  max-width: 960px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -364,6 +368,24 @@ ul.row {
 
 .col-1-2 {
   width: calc((100% / 2) - 2rem);
+}
+
+@media screen and (max-width: 767px) {
+  :root {
+    --section-padding: 5rem 1.5rem;
+    --section-body-padding: 2rem 0 0;
+  }
+  ul.row {
+    flex-direction: column;
+    margin: 0;
+  }
+  [class^="col-"] {
+    margin: 0 0 3rem 0;
+  }
+  .col-1-2,
+  .col-1-3 {
+    width: 100%;
+  }
 }
 
 /* Navbar
@@ -413,6 +435,12 @@ ul.row {
 .nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
   width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .navbar-menu {
+    display: none;
+  }
 }
 
 /* Header
@@ -553,6 +581,11 @@ ul.row {
   flex-direction: row-reverse;
 }
 
+@media screen and (max-width: 767px) {
+  .section-latest-news .row {
+    flex-direction: column;
+  }
+}
 /* Section SERVICES
       ============================= */
 
@@ -1011,4 +1044,13 @@ textarea:valid:not(:placeholder-shown) {
   padding: 0;
   cursor: text;
   margin: 0 1rem;
+}
+/* Media query for desktop / large devices */
+@media screen and (max-width: 960px) {
+}
+/* Media query for tablet / medium styles */
+@media screen and (max-width: 767px) {
+}
+/* Media mobile styles */
+@media screen and (max-width: 480px) {
 }
